# Velora

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  VISION.md  docker-compose.dev.yml  docker-compose.host-nginx-port.yml  docker-compose.prod.yml  docker-compose.vps.yml  manage.py  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.dev  Dockerfile.prod  entrypoint.sh
docker/nginx/: dev.conf  prod.conf
docs/: INFRASTRUCTURE.md  INTEGRATION_STATIC.md
docs/examples/: alert.html  buttons-and-links.html  form-row-text.html  header-menu-static.html  ionicons-gallery-static.html  label-badge.html  minimal-app-shell.html  toast-programmatic.html
docs/examples/_generated/: README.md  label-badge-fragment.html
scripts/: deploy-vps.sh  deploy.env.example  env-exports.example.sh
showcase/: apps.py  urls.py  views.py
showcase/locale/en/LC_MESSAGES/: django.mo  django.po
showcase/templates/showcase/: index.html
src/velora_ui/: __init__.py  apps.py  chartutils.py  context_processors.py  settings.py  widgets.py
src/velora_ui/static/velora_ui/icons/: ionicons-manifest.json
src/velora_ui/static/velora_ui/js/src/: velora.js  velora_core_entry.js  velora_register_core_only.js  velora_runtime.js
src/velora_ui/static/velora_ui/js/src/components/: autocomplete.js  chart_from_table.js  confirm.js  copy.js  datepicker.js  dialog.js  dropdown.js  header_menu.js  image_preview.js  ionicons_gallery.js  multiselect.js  rating.js  redactor.js  select_all_table.js  sidebar.js  sidebar_nav.js  table_cell.js  theme_toggle.js  timer.js  toast.js  toggle.js  tooltip.js
src/velora_ui/static/velora_ui/scss/: _breadcrumb.scss  _chart.scss  _checkbox.scss  _dialog.scss  _dropdown.scss  _feedback.scss  _form-row-v03.scss  _form-row.scss  _header.scss  _icon.scss  _ionicons.scss  _layout.scss  _links.scss  _logo.scss  _progress.scss  _reset.scss  _satisfaction.scss  _sidebar.scss  _submenu.scss  _table-v03.scss  _table.scss  _theme-dark.scss  _title-bar.scss  _tokens.scss  _tooltip.scss  _typography.scss  _utilities.scss  velora.scss
src/velora_ui/templates/velora_ui/: base.html
src/velora_ui/templates/velora_ui/components/breadcrumb/: _breadcrumb.html
src/velora_ui/templates/velora_ui/components/chart/: _from_table.html
src/velora_ui/templates/velora_ui/components/feedback/: _alert.html  _label.html  _satisfaction_bar.html
src/velora_ui/templates/velora_ui/components/form_row/: _checkbox_tag.html  _fields_separator.html  _help_error.html  _label.html  _search_box.html  autocomplete.html  checkbox.html  datepicker.html  datetimepicker.html  file.html  image_preview.html  multiselect.html  onoff.html  radio.html  rating_stars.html  redactor.html  remote_autocomplete.html  select.html  text.html  textarea.html  timer_fields.html
src/velora_ui/templates/velora_ui/components/header/: _header.html
src/velora_ui/templates/velora_ui/components/icons/: _ionicons_gallery.html
src/velora_ui/templates/velora_ui/components/layout/: _velora_logo.html
src/velora_ui/templates/velora_ui/components/progress/: _condensed_breadcrumb.html  _new_progress_bar.html  _progress_bar.html
src/velora_ui/templates/velora_ui/components/sidebar/: _sidebar.html  _sidebar_item.html
src/velora_ui/templates/velora_ui/components/submenu/: _submenu.html
src/velora_ui/templates/velora_ui/components/table/: _form_in_cell.html  _pagination.html  _select_all.html  _table.html
src/velora_ui/templates/velora_ui/components/title_bar/: _title_bar.html
src/velora_ui/templates/velora_ui/widgets/: onoff.html
src/velora_ui/templatetags/: velora_assets.py  velora_chart.py  velora_data.py  velora_feedback.py  velora_forms.py  velora_icons.py  velora_layout.py  velora_links.py  velora_navigation.py  velora_overlays.py
tests/: test_chart.py  test_data_and_links.py  test_data_v03.py  test_feedback.py  test_forms.py  test_forms_v03.py  test_i18n_urls.py  test_icons.py  test_layout.py  test_links_v02.py  test_navigation.py  test_overlays.py  test_showcase_ionicons.py  test_ui_registry_sync.py  test_velora_assets.py
tests/visual/: conftest.py  test_showcase.py
tools/: _validation_gate_dev.py  build_css.sh  build_js.sh  build_web_dist.sh  publish_github_release_manual.sh  showcase_visual_labels.py  start_assets.sh  sync_ionicons.sh  sync_ui_registry.py  validation_gate_dev.sh
ui_registry/: README.md  registry.json
ui_registry/literals/: feedback_alert_comment.txt  feedback_label_comment.txt  form_row_help_error_comment.txt  form_row_label_comment.txt
ui_registry/parts/feedback/: alert_close_button.html  label.html
velora_project/: asgi.py  settings.py  urls.py  wsgi.py
