[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "velora-ui"
version = "0.7.0"
description = "Framework grafico Django per pannelli admin: template tag riusabili, design system SCSS, JS vanilla a moduli ES."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Gioele Cavallo" },
]
keywords = ["django", "ui", "framework", "admin", "template-tags"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=5,<6",
    "django-environ>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4.8",
    # NB: la versione di playwright deve coincidere con quella dell'immagine
    # docker `mcr.microsoft.com/playwright/python:vX.Y.Z-jammy` usata dal
    # servizio `playwright-tests` (docker-compose.dev.yml). I browser sono
    # bundle-ati nell'immagine; un mismatch fa fallire il test con
    # "Executable doesn't exist". Tenere allineate.
    "pytest-playwright>=0.5,<0.6",
    "playwright==1.50.0",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "build>=1.2",
]
prod = [
    "gunicorn>=22",
    "psycopg[binary]>=3.1",
]

[project.urls]
Repository = "https://github.com/gioelecavallo13/Velora.git"

[tool.hatch.build.targets.wheel]
packages = ["src/velora_ui"]

[tool.hatch.build.targets.sdist]
include = [
    "src/velora_ui",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "AGENTS.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "DJ"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/velora_ui"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
# Senza `django-stubs` (rinviato a v0.2 per non aggiungere una dipendenza
# heavy alla v0.1) Django espone `Any` su:
#   - le superclassi (AppConfig, CheckboxInput, ...) -> error code `misc`
#     "Class cannot subclass ... has type Any"
#   - i decoratori `register.simple_tag` / `inclusion_tag` -> `untyped-decorator`
#   - i moduli senza `py.typed` -> `import-untyped`
#   - i metodi che ritornano implicitamente `Any` -> `no-any-return`
# Disabilitiamo questi error code a livello globale: il typing rigoroso
# resta attivo su tutto il codice nostro, accettiamo l'opacita` solo sui
# confini con Django. Quando aggiungeremo django-stubs ridurremo questa
# lista (issue tracciata nel piano alla sezione "v0.2 quality gates").
disable_error_code = ["untyped-decorator", "misc", "import-untyped", "no-any-return"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "velora_project.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
# I test in tests/visual/ richiedono Playwright + browser e girano in un
# container dedicato (vedi servizio `playwright-tests` di docker-compose).
# Esclusi dalla suite di default per evitare ImportError sul container web.
norecursedirs = ["tests/visual"]
